--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,27 @@
-# references:
-# * https://www.objc.io/issues/6-build-tools/travis-ci/
-# * https://github.com/supermarin/xcpretty#usage
-
-osx_image: xcode7.3
 language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+
+osx_image: xcode10.2
+
+env:
+  matrix:
+    - TEST_SDK=iphonesimulator12.2 OS=12.2 NAME='iPhone XR'
+    - TEST_SDK=iphonesimulator12.2 OS=10.0 NAME='iPhone 6s Plus'
+    - TEST_SDK=iphonesimulator12.2 OS=10.0 NAME='iPhone 5'
+
+cache: cocoapods
+
+podfile: Example/Podfile
+
+before_install:
+ - gem install slather
+ - gem install xcpretty       
+ - gem install cocoapods
+ - pod install --project-directory=Example
+  
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/ECDHESSwift.xcworkspace -scheme ECDHESSwift-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+ - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/ECDHESSwift.xcworkspace -scheme ECDHESSwift-Example -sdk $TEST_SDK -destination "platform=iOS Simulator,OS=$OS,name=$NAME" ONLY_ACTIVE_ARCH=YES | xcpretty
+ - pod lib lint
+
+after_success:
+  - slather
+  - bash <(curl -s https://codecov.io/bash) -f reports/cobertura.xml -X coveragepy -X gcov -X xcode
