--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ osx_image: xcode10.2
 
 env:
   matrix:
-    - TEST_SDK=iphonesimulator12.2 OS=12.2 NAME='iPhone XR'
+    - TEST_SDK=iphonesimulator12.2 OS=12.2 NAME='iPhone XR' CAN_DEPLOY=YES
     - TEST_SDK=iphonesimulator12.2 OS=10.0 NAME='iPhone 6s Plus'
     - TEST_SDK=iphonesimulator12.2 OS=10.0 NAME='iPhone 5s'
 
@@ -23,3 +23,10 @@ script:
 
 after_success:
  - bash <(curl -s https://codecov.io/bash) -J 'ECDHESSwift'
+
+deploy:
+  provider: script
+  script: ./scripts/pod_trunk_push.sh
+  on:
+    tags: true
+    condition: $CAN_DEPLOY = YES
