Add AES_CBC_HMAC_SHA2 Content Encryption Algorithm

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ podfile: Example/Podfile
 
 before_install:
  - gem install xcpretty       
- - gem install cocoapods
+ - gem install cocoapods -v $(cat Example/Podfile.lock |grep COCOAPODS |awk '{print $2}')
  - pod install --project-directory=Example
   
 script:
